--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "bin": {
+    "learn": "bin/learn.js"
+  },
+  "type": "module",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Antony11659/language_learning_app.git"
@@ -18,5 +22,8 @@
   "bugs": {
     "url": "https://github.com/Antony11659/language_learning_app/issues"
   },
-  "homepage": "https://github.com/Antony11659/language_learning_app#readme"
+  "homepage": "https://github.com/Antony11659/language_learning_app#readme",
+  "dependencies": {
+    "readline-sync": "^1.4.10"
+  }
 }
