--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "dependencies": {
     "@iamtraction/google-translate": "^2.0.1",
     "axios": "^1.4.0",
+    "limax": "^4.1.0",
     "readline-sync": "^1.4.10"
   },
   "devDependencies": {
